chore>nginx config

--- a/project-meu-cantinho/frontend/nginx.conf
+++ b/project-meu-cantinho/frontend/nginx.conf
@@ -5,17 +5,32 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Gzip compression para performance
+    # Compressão Gzip para performance
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Rota principal: Redireciona tudo para index.html (Lógica SPA)
+    # 1. Rota do Frontend (SPA)
+    # Qualquer requisição que não comece com /api cai aqui
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache de arquivos estáticos (imagens, css, scss, js)
-    location ~* \.(?:ico|css|scss|js|gif|jpe?g|png)$ {
+    # 2. Rota da API (Reverse Proxy)
+    # O NGINX recebe '/api/...' e repassa internamente para o container 'api' na porta 8080
+    location /api {
+        # 'api' é o nome do serviço definido no docker-compose.yml
+        # O Docker resolve esse nome para o IP interno do container
+        proxy_pass http://api:8080;
+
+        # Cabeçalhos importantes para o Spring Boot saber quem é o cliente real
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Cache de arquivos estáticos
+    location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
         expires 1y;
         add_header Cache-Control "public";
     }
