chore> add application.properties

--- a/project-meu-cantinho/backend/src/main/resources/application.properties
+++ b/project-meu-cantinho/backend/src/main/resources/application.properties
@@ -1,1 +1,48 @@
-spring.application.name=api
+# ==============================================================
+# CONFIGURAÇÕES GERAIS
+# ==============================================================
+spring.application.name=api-seu-cantinho
+server.port=8080
+
+# ==============================================================
+# BANCO DE DADOS (PostgreSQL)
+# ==============================================================
+# URL de Conexão Híbrida:
+# - No Docker: O docker-compose injeta SPRING_DATASOURCE_URL apontando para "jdbc:postgresql://db:5432/..."
+# - Local (IDE): Usa o fallback "jdbc:postgresql://localhost:5432/..."
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/seucantinho}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:user}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:pass}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ==============================================================
+# JPA / HIBERNATE (ORM)
+# ==============================================================
+# update: Atualiza o schema do banco automaticamente ao mudar as classes Java (Ótimo para dev)
+# validate: Usar em produção (apenas valida se o banco bate com o código)
+spring.jpa.hibernate.ddl-auto=update
+
+# Dialeto específico para aproveitar recursos do Postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Logs de SQL (Para debug: mostra no console as queries que o Java está fazendo)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Performance: Desativa a transação na camada de View (Evita queries fantasmas na serialização do JSON)
+spring.jpa.open-in-view=false
+
+# ==============================================================
+# SWAGGER / OPENAPI (Documentação)
+# ==============================================================
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+# Permite ordenar os endpoints alfabeticamente na UI
+springdoc.swagger-ui.operations-sorter=method
+
+# ==============================================================
+# INTERNACIONALIZAÇÃO E FORMATOS
+# ==============================================================
+# Garante que datas venham no formato ISO-8601 (padrão mundial)
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
+spring.jackson.time-zone=UTC
