fix>remove caracteres especiais

--- a/project-meu-cantinho/backend/src/main/resources/application.properties
+++ b/project-meu-cantinho/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ==============================================================
-# CONFIGURAÇÕES GERAIS
+# CONFIGURACOES GERAIS
 # ==============================================================
 spring.application.name=api-seu-cantinho
 server.port=8080
@@ -7,7 +7,7 @@ server.port=8080
 # ==============================================================
 # BANCO DE DADOS (PostgreSQL)
 # ==============================================================
-# URL de Conexão Híbrida:
+# URL de Conexao Hibrida:
 # - No Docker: O docker-compose injeta SPRING_DATASOURCE_URL apontando para "jdbc:postgresql://db:5432/..."
 # - Local (IDE): Usa o fallback "jdbc:postgresql://localhost:5432/..."
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/seucantinho}
@@ -18,22 +18,22 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ==============================================================
 # JPA / HIBERNATE (ORM)
 # ==============================================================
-# update: Atualiza o schema do banco automaticamente ao mudar as classes Java (Ótimo para dev)
-# validate: Usar em produção (apenas valida se o banco bate com o código)
+# update: Atualiza o schema do banco automaticamente ao mudar as classes Java (otimo para dev)
+# validate: Usar em producao (apenas valida se o banco bate com o codigo)
 spring.jpa.hibernate.ddl-auto=update
 
-# Dialeto específico para aproveitar recursos do Postgres
+# Dialeto especifico para aproveitar recursos do Postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Logs de SQL (Para debug: mostra no console as queries que o Java está fazendo)
+# Logs de SQL (Para debug: mostra no console as queries que o Java esta fazendo)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Performance: Desativa a transação na camada de View (Evita queries fantasmas na serialização do JSON)
+# Performance: Desativa a transacao na camada de View (Evita queries fantasmas na serializacao do JSON)
 spring.jpa.open-in-view=false
 
 # ==============================================================
-# SWAGGER / OPENAPI (Documentação)
+# SWAGGER / OPENAPI (Documentacao)
 # ==============================================================
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -41,8 +41,8 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operations-sorter=method
 
 # ==============================================================
-# INTERNACIONALIZAÇÃO E FORMATOS
+# INTERNACIONALIZACAO E FORMATOS
 # ==============================================================
-# Garante que datas venham no formato ISO-8601 (padrão mundial)
+# Garante que datas venham no formato ISO-8601 (padrao mundial)
 spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
 spring.jackson.time-zone=UTC
