chore>cria tabelas e dados iniciais

--- a/project-meu-cantinho/backend/src/main/resources/application.properties
+++ b/project-meu-cantinho/backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ==============================================================
 # update: Atualiza o schema do banco automaticamente ao mudar as classes Java (otimo para dev)
 # validate: Usar em producao (apenas valida se o banco bate com o codigo)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 # Dialeto especifico para aproveitar recursos do Postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
