--- a/project-meu-cantinho/docker-compose.yml
+++ b/project-meu-cantinho/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - "0.0.0.0:5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - cantinho-net
 
