chore: configurar dependências e propriedades

--- a/project-meu-cantinho/backend/src/main/resources/application.properties
+++ b/project-meu-cantinho/backend/src/main/resources/application.properties
@@ -18,8 +18,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ==============================================================
 # JPA / HIBERNATE (ORM)
 # ==============================================================
-# update: Atualiza o schema do banco automaticamente ao mudar as classes Java (otimo para dev)
-# validate: Usar em producao (apenas valida se o banco bate com o codigo)
+# validate: Valida se o schema do banco bate com as entidades (recomendado com Flyway)
 spring.jpa.hibernate.ddl-auto=validate
 
 # Dialeto especifico para aproveitar recursos do Postgres
