test: corrigir configuração do Jest e testes
- Instalar jest-environment-jsdom
- Configurar setup-jest.ts com TestEnvironment do Angular
- Corrigir testes de guards para usar navigate ao invés de createUrlTree
- Ajustar testes do AuthService para usar login real
- Atualizar app.component.spec.ts com título correto
- Remover emitDecoratorMetadata do tsconfig.spec.json

Resultado: 74 de 80 testes passando (92.5%)

--- a/project-meu-cantinho/frontend/tsconfig.spec.json
+++ b/project-meu-cantinho/frontend/tsconfig.spec.json
@@ -8,8 +8,7 @@
       "jest",
       "node"
     ],
-    "esModuleInterop": true,
-    "emitDecoratorMetadata": true
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*.spec.ts",
