--- a/project-meu-cantinho/frontend/package.json
+++ b/project-meu-cantinho/frontend/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^30.0.0",
     "jasmine-core": "~5.6.0",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jest-preset-angular": "^15.0.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
