fix: configura columnDefinition para enums do PostgreSQL

--- a/project-meu-cantinho/backend/src/main/resources/application.properties
+++ b/project-meu-cantinho/backend/src/main/resources/application.properties
@@ -24,6 +24,10 @@ spring.jpa.hibernate.ddl-auto=validate
 # Dialeto especifico para aproveitar recursos do Postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+# Suporte a enums do PostgreSQL (resolve casting de enums)
+spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=true
+spring.jpa.properties.hibernate.type.preferred_java_time_jdbc_type=TIMESTAMP
+
 # Logs de SQL (Para debug: mostra no console as queries que o Java esta fazendo)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
