test: aumenta cobertura para 90%

--- a/project-meu-cantinho/backend/src/main/resources/application.properties
+++ b/project-meu-cantinho/backend/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 # ==============================================================
 spring.application.name=api-seu-cantinho
 server.port=8080
+logging.level.root=DEBUG
 
 # ==============================================================
 # BANCO DE DADOS (PostgreSQL)
